# Grim

./: .gitmodules  CMakeLists.txt
cmake/: FindGMP.cmake  FindUnistring.cmake
src/grim/: CMakeLists.txt  main.c
src/libgrim/: CMakeLists.txt  builtins.c  exec.c  funcs.c  grim.c  grim.h  hashing.c  internal.h  modules.c  numbers.c  objects.c  parsing.c  strings.c  strings.h
test/: CMakeLists.txt  builtins.c  bytecode.c  hashtables.c  immediate-objects.c  lists.c  main.c  numbers.c  strings.c  symbols.c  test.h  vectors.c
